vlib/v/checker/tests/cast_voidptr_to_struct_err.out
vlib/v/checker/tests/cast_voidptr_to_struct_err.vv:6:9: error: cannot cast `voidptr` to struct
    4 |
    5 | fn unwrap_concrete(ptr voidptr) Foo {
    6 |     return Foo(ptr)
      |            ~~~~~~~~
    7 | }
    8 |
vlib/v/checker/tests/cast_voidptr_to_struct_err.vv:10:9: error: cannot cast `voidptr` to struct
    8 |
    9 | fn unwrap_generic<T>(ptr voidptr) T {
   10 |     return T(ptr)
      |            ~~~~~~
   11 | }
   12 |
